objects/SBQQ__TaxExemptionCertificate__c.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCPQ__Avalara_Certificate_Id__c</fullName>
        <description>An unique ID associated with the customer&apos;s exemption certificate. Please do not enter new value or edit this field.</description>
        <inlineHelpText>An unique ID associated with the customer&apos;s exemption certificate. Please do not enter new value or edit this field.</inlineHelpText>
        <label>Avalara Certificate ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Exemption_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reason which allows the exemption to the customer.</description>
        <inlineHelpText>Reason which allows the exemption to the customer.</inlineHelpText>
        <label>Exemption Reason</label>
        <referenceTo>AVA_SFCPQ__Exemption_Reasons__c</referenceTo>
        <relationshipLabel>Tax Exemption Certificates</relationshipLabel>
        <relationshipName>Tax_Exemption_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Exposure_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State / Region for which the customer is getting exempted.</description>
        <inlineHelpText>State / Region for which the customer is getting exempted.</inlineHelpText>
        <label>Exposure Zone</label>
        <referenceTo>AVA_SFCPQ__Exposure_Zone__c</referenceTo>
        <relationshipLabel>Tax Exemption Certificates</relationshipLabel>
        <relationshipName>Tax_Exemption_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Exemption Certificates</relationshipLabel>
        <relationshipName>Tax_Exemption_Certificates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>An Active Certificate will make set the ‘Tax Exempt?’ field on the Active to true</description>
        <inlineHelpText>An Active Certificate will make set the ‘Tax Exempt?’ field on the Active to true</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CertificateNumber__c</fullName>
        <label>Certificate Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Country__c</fullName>
        <description>Optional - to track the company address associated to the certificate</description>
        <inlineHelpText>ptional - to track the company address associated to the certificate</inlineHelpText>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__County__c</fullName>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DateIssued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A certificate can be marked as default only if it is active</description>
        <inlineHelpText>A certificate can be marked as default only if it is active</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExemptCompanyName__c</fullName>
        <description>The company name or DBA name associated to the certificate</description>
        <inlineHelpText>The company name or DBA name associated to the certificate</inlineHelpText>
        <label>Exempt Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__IssuingAuthority__c</fullName>
        <description>The authority, such as a government agency or country (for European organizations), that issued the certificate</description>
        <inlineHelpText>The authority, such as a government agency or country (for European organizations), that issued the certificate</inlineHelpText>
        <label>Issuing Authority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StreetAddress_2__c</fullName>
        <label>Street Address_2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Tax Exemption Certificate</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Exemption Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Exemption Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AVA_SFCPQ__Lock_Avalara_Certificate_Id_field</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(AVA_SFCPQ__Avalara_Certificate_Id__c) &gt; 0 &amp;&amp; ISCHANGED(AVA_SFCPQ__Avalara_Certificate_Id__c)</errorConditionFormula>
        <errorDisplayField>AVA_SFCPQ__Avalara_Certificate_Id__c</errorDisplayField>
        <errorMessage>Please do not edit this value</errorMessage>
    </validationRules>
</CustomObject>